# aws-cdk-python-template-project

./: README.md  package.json  pyproject.toml
